# RoboCtrl

./: .gitignore  CMakeLists.txt  README.md  architecture.md  test.py
include/: control.h  trajectory.hh
old/: main.py  main2.py
python/: setup.py  test.py
python /: setup.py  test.py
python /oneaxiscontrol/: motion_control.py
src/: control.cpp  main.cpp  trajectory.cpp  trajectory_pybind.cpp
